logs/Slang/generated/hdlconv/hdlconvertor_p886.sv.log
name: hdlconvertor_p886
description: Tests imported from hdlconv
files: /home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p886.sv
should_fail: 0
tags: hdlconv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p886.sv:5:18: error: use of undeclared identifier 'clk'
always @(posedge clk)
                 ^~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p886.sv:7:1: error: expected member
specify
^~~~~~~
../../home/travis/build/SymbiFlow/sv-tests/third_party/tests/hdlconvertor/tests/sv_test/std2017/p886.sv:9:1: error: expected member
endspecify
^~~~~~~~~~
